--- a/thesis/ref.bib
+++ b/thesis/ref.bib
@@ -420,3 +420,12 @@ month={Nov},
   year =	 2007,
   month =	 {June}
 }
+
+@InProceedings{Butler1992,
+  author = 	 {M. Butler and Y. Patt},
+  title = 	 {An Investigation of the Performance of Various Dynamic Scheduling Techniques},
+  booktitle = {Proceedings of the 25th Annual IEEE/ACM International Symposium on Microarchitecture},
+  year = 	 {1992},
+  pages = 	 {1-9},
+  month = 	 {December},
+}
