--- a/thesis/src/eval.tex
+++ b/thesis/src/eval.tex
@@ -120,7 +120,7 @@
 なお，以降の評価において，（メイン・セグメント数，サブ・セグメント数） の形式でセグメント数を表記する．また，サブ・セグメントを使用しない場合は，サブ・セグメント数は 1 と表記する．今回の場合は（16，1）となる．
 
 \subsection{タグ比較回数の削減}
-\fig{comp_16_1}に，提案手法の BASE モデルに対するタグ比較回数の割合をベンチマークごとに示す．GM は全ベンチマークでの平均を表す．AGGRESSIVE と CONSERVATIVE のタグ比較回数削減に関しては、同図より，いずれのベンチマークにおいても，AGGRESSIVE のほうがタグ比較回数が少ないことがわかる．その差は 平均で 20\% 程度となっており，AGGRESSIVE モードのタグ比較回数を積極的に削減できるという性質が確認できる。
+\fig{comp_16_1}に，提案手法の BASE モデルに対するタグ比較回数の割合をベンチマークごとに示す．GM は全ベンチマークでの平均を表す．AGGRESSIVE と CONSERVATIVE のタグ比較回数削減に関しては，同図より，いずれのベンチマークにおいても，AGGRESSIVE のほうがタグ比較回数が少ないことがわかる．その差は 平均で 20\% 程度となっており，AGGRESSIVE モードのタグ比較回数を積極的に削減できるという性質が確認できる．
 
 同図より SWITCH 方式では，平均で BASE モデルの 25\% 程度のタグ比較回数となっており，75\% の削減を達成している．
 
