--- a/thesis/submit_swopp.tex
+++ b/thesis/submit_swopp.tex
@@ -40,7 +40,7 @@
 \author{安藤 秀樹}{Hideki Ando}{NU}
 
 \begin{abstract}
-発行キューは電力密度の大きいホット・スポットとして知られている．ホット・スポットは，デバイスの摩耗故障を引き起こし，誤動作やタイミング・エラーを引き起こす．発行キューが大きな電力を消費する原因は，ウェイクアップ論理のタグ比較回路である．この回路はCAMで構成されており，全てのデスティネーション・タグと発行キュー内の全てのソース・タグとの多数の比較を一斉に行うため，非常に大きな電力を消費する．そこで本論文では，CAM の分野で提案されている手法を応用し，タグ比較による消費電力を削減する手法を提案する．本手法では，発行キューを複数のセグメントに分割する．命令は，ソース・タグの下位ビットがセグメント番号と一致するセグメントにディスパッチする．そして，ウェイクアップ時には，ディスティネーション・タグの下位ビットが一致するセグメントにあるタグ比較器のみを動作させる．一致しないセグメントの比較器は動作しないため，タグ比較器の動作回数を削減できる．
+発行キューは電力密度の大きいホット・スポットとして知られている．ホット・スポットは，デバイスの摩耗故障を引き起こし，誤動作やタイミング・エラーを引き起こす．発行キューが大きな電力を消費する原因は，ウェイクアップ論理のタグ比較回路である．この回路はCAMで構成されており，全てのデスティネーション・タグと発行キュー内の全てのソース・タグとの多数の比較を一斉に行うため，非常に大きな電力を消費する．そこで本論文では，CAM の分野で提案されている手法を応用し，タグ比較による消費電力を削減する手法を提案する．本手法では，発行キューを複数のセグメントに分割する．命令は，ソース・タグの下位ビットがセグメント番号と一致するセグメントにディスパッチする．そして，ウェイクアップ時には，デスティネーション・タグの下位ビットが一致するセグメントにあるタグ比較器のみを動作させる．一致しないセグメントの比較器は動作しないため，タグ比較器の動作回数を削減できる．
 
 本手法では，命令がディスパッチされるセグメントに空きがない場合，他のセグメントに空きがあってもディスパッチできないためストールする．この結果，発行キューの容量効率が低下するという問題が生じる．この問題は，発行キューの容量効率が重要なプログラムにおいて性能低下を引き起こす．そこで本論文では，容量効率を重視したディスパッチ・アルゴリズムと，タグ比較の積極的な削減を重視したディスパッチ・アルゴリズムを動的に切り替える手法を提案する．本手法は，発行キューの容量効率が重要な場合は容量効率の低下による性能低下を抑制し，そうでない場合は積極的にタグ比較器の動作回数を削減することを可能とする．提案手法を SPEC CPU 2017 を用いて評価を行った．結果，性能低下を最大で 5\% 以下（平均 -1\%）に抑えつつ，タグ比較器の動作回数を平均で 85\% 削減できることを確認した．
 \end{abstract}
@@ -55,9 +55,9 @@
 
 ホット・スポットを生成する回路の１つに，発行キューがある．発行キューのサイズはプロセッサの世代が進むごとに大きくなっており，より深刻なホット・スポットとなっている．従って，発行キューの電力削減に対する要求は非常に大きい．
   
-発行キューの中で最も電力を消費する回路は，タグ比較の回路である．タグ比較は，発行幅分のディスティネーション・タグとすべてのソース・タグとの間で行われるため，非常に多くの電力を消費する．そこで本論文では，タグ比較器が動作する回数を削減する以下のような手法を提案する．
+発行キューの中で最も電力を消費する回路は，タグ比較の回路である．タグ比較は，発行幅分のデスティネーション・タグとすべてのソース・タグとの間で行われるため，非常に多くの電力を消費する．そこで本論文では，タグ比較器が動作する回数を削減する以下のような手法を提案する．
 \begin{itemize}
-  \item 発行キューを複数の\textbf{セグメント}に分割する．命令を発行キューにディスパッチする際，第 1 ソース・タグの下位ビットが $n$ である命令は，第 $n$ 番目のセグメントに書き込む．タグ比較時には，ディスティネーション・タグの下位ビットがセグメント番号と一致するセグメントでのみ，第 1 ソース・タグの比較を行う．一致しないセグメントでは比較が行われない．これによりタグ比較回数が削減される．
+  \item 発行キューを複数の\textbf{セグメント}に分割する．命令を発行キューにディスパッチする際，第 1 ソース・タグの下位ビットが $n$ である命令は，第 $n$ 番目のセグメントに書き込む．タグ比較時には，デスティネーション・タグの下位ビットがセグメント番号と一致するセグメントでのみ，第 1 ソース・タグの比較を行う．一致しないセグメントでは比較が行われない．これによりタグ比較回数が削減される．
   \item 上記の方法では，第 2 ソース・タグの比較回数は削減されない．そこで提案手法では\textbf{スワップ}と\textbf{サブ・セグメント}と呼ぶ 2 つの方法を導入し，第 2 ソース・タグの比較回数も削減する．スワップは，ディスパッチ時に第 1 ソース・オペランドがレディで，第 2 ソース・オペランドがレディでない命令において，第 1 ソース・タグと第 2  ソース・タグを格納するフィールドを交換し，第 2 ソース・タグの下位ビットを用いてディスパッチするセグメントを決定する手法である．サブ・セグメントは，各セグメントを第 2 ソース・タグにもとづきさらに分割する手法である．
   \item セグメント化によりディスパッチできるエントリが制限されるため，発行キューの容量効率が低下し，容量に敏感なプログラムにおいて性能が低下するという問題が存在する．この問題に対応するため，本論文では \textbf{SWITCH} という手法を提案する．SWITCH では，容量効率を重視したディスパッチ・アルゴリズムと，タグ比較回数の削減を重視したディスパッチ・アルゴリズムを，容量効率の重要性に応じて切り替えて使用することにより，性能低下を抑制する．
 \end{itemize}
@@ -92,9 +92,9 @@
 \end{figure}
 
 \subsubsection{ウェイクアップ}
-命令が発行されると，その命令のディスティネーション・オペランドのタグと発行キュー内にある全命令のソース・オペランドのタグの比較が行われる．比較が一致した場合には,対応するソース・オペランドのレディ・ビットをセットする．この動作をウェイクアップと呼ぶ．両方のオペランドがレディとなった命令は，依存が解消したため発行可能となる．
+命令が発行されると，その命令のデスティネーション・オペランドのタグと発行キュー内にある全命令のソース・オペランドのタグの比較が行われる．比較が一致した場合には,対応するソース・オペランドのレディ・ビットをセットする．この動作をウェイクアップと呼ぶ．両方のオペランドがレディとなった命令は，依存が解消したため発行可能となる．
 
-\fig{wakeup_logic}に，ウェイクアップの回路を示す．図中の $IW$ は発行幅を，$IQS$ は発行キューのエントリ数を表す．ウェイクアップでは，$IW$ 個のディスティネーション・タグ（dtag）が発行キュー内の全命令に放送される．各命令は 2 つのソース・タグ(stag）を保持しており，放送されたディスティネーション・タグと比較が行われる．いずれかのディスティネーション・タグとソース・タグが一致した場合，そのソース・オペランドのレディ・ビットがセットされる．2 つのレディ・ビットがセットされた命令は発行が可能となるため発行要求が出力される．
+\fig{wakeup_logic}に，ウェイクアップの回路を示す．図中の $IW$ は発行幅を，$IQS$ は発行キューのエントリ数を表す．ウェイクアップでは，$IW$ 個のデスティネーション・タグ（dtag）が発行キュー内の全命令に放送される．各命令は 2 つのソース・タグ(stag）を保持しており，放送されたデスティネーション・タグと比較が行われる．いずれかのデスティネーション・タグとソース・タグが一致した場合，そのソース・オペランドのレディ・ビットがセットされる．2 つのレディ・ビットがセットされた命令は発行が可能となるため発行要求が出力される．
 
 \fig{cam}に発行キューに使用されるタグ比較器の CAM 回路を示す．同図は，ソース・タグ 1 ビット分の比較回路を表す．同図に示すように，高速化のため通常ダイナミック論理によって構成される．比較の動作は，次のように行われる．まず，マッチ線がプリチャージされる．次にデスティネーション・タグが放送され，比較が行われる．タグが不一致であれば，直列に接続された 2 つのプルダウン・トランジスタが両方とも ON となり，マッチ線がディスチャージされる．タグが一致する場合，マッチ線は $H$ の状態が維持される．比較器はマッチ線のディスチャージ時に電力を消費する．
 
@@ -123,7 +123,7 @@ Ponomarev らと Sembrant らの手法は，発行キューのサイズを縮小
 \subsection{提案手法の概要}
 提案手法の基本アイデアは，大容量 CAM の電力削減に関する研究~\cite{Motomura1990journal}から着想を得ている．この研究において提案されている手法では，CAM を複数の\textbf{セグメント}~\footnote{文献~\cite{Motomura1990journal}ではバンクと呼ばれている}に分割する．各セグメントには下位ビットが同一のデータのみを記録する．そして，比較が行われる際には，比較対象のデータの下位ビットと，記録されているデータの下位ビットが一致するセグメントのみで比較を行う．これによって，比較器が動作する回数を「1/セグメント数」まで削減することができ，消費電力が削減できる．
 
-本手法においても，\fig{segmentedIQ}に示すように発行キューを複数のセグメントに分割する．各セグメントには，第 1 ソース・タグの下位ビットがセグメントの番号と一致する命令をディスパッチする．ウェイクアップ時の第 1 ソース・タグのタグ比較では，ディスティネーション・タグの下位ビットとセグメントの番号が一致するセグメントのみでタグ比較を行う．これによって，第 1 ソース・タグのタグ比較回数を「1/セグメント数」に削減できる．
+本手法においても，\fig{segmentedIQ}に示すように発行キューを複数のセグメントに分割する．各セグメントには，第 1 ソース・タグの下位ビットがセグメントの番号と一致する命令をディスパッチする．ウェイクアップ時の第 1 ソース・タグのタグ比較では，デスティネーション・タグの下位ビットとセグメントの番号が一致するセグメントのみでタグ比較を行う．これによって，第 1 ソース・タグのタグ比較回数を「1/セグメント数」に削減できる．
 
 提案手法におけるディスパッチとウェイクアップに関して詳しく説明する．
 
@@ -156,25 +156,25 @@ Ponomarev らと Sembrant らの手法は，発行キューのサイズを縮小
 
 
 \subsection{提案手法におけるウェイクアップ}
-提案手法におけるウェイクアップでは，ディスティネーション・タグの下位ビットがセグメント番号と一致するセグメントでのみ，第 1 ソース・タグのタグ比較器を動作させ比較を行う．一致しないセグメントはタグ比較器を動作させない．これは，ディスティネーション・タグの下位ビットと番号が一致しないセグメントには，第 1 ソース・タグの下位ビットがディスティネーション・タグの下位ビットと異なる命令しか入っておらず，タグは必ず不一致となるためである．
+提案手法におけるウェイクアップでは，デスティネーション・タグの下位ビットがセグメント番号と一致するセグメントでのみ，第 1 ソース・タグのタグ比較器を動作させ比較を行う．一致しないセグメントはタグ比較器を動作させない．これは，デスティネーション・タグの下位ビットと番号が一致しないセグメントには，第 1 ソース・タグの下位ビットがデスティネーション・タグの下位ビットと異なる命令しか入っておらず，タグは必ず不一致となるためである．
 
-例として，放送されたディスティネーション・タグが 6（${\rm 110_2}$）で，発行キューが\fig{segmentedIQ}のように 4 つのセグメントに分割されている場合を考える．この場合，下位ビットは 2（${\rm 10_2}$）であるため，第 2 セグメントでのみ，第 1 ソース・タグのタグ比較を行う．
+例として，放送されたデスティネーション・タグが 6（${\rm 110_2}$）で，発行キューが\fig{segmentedIQ}のように 4 つのセグメントに分割されている場合を考える．この場合，下位ビットは 2（${\rm 10_2}$）であるため，第 2 セグメントでのみ，第 1 ソース・タグのタグ比較を行う．
 
 なお，第 2 ソース・タグのタグ比較に関しては，セグメントの番号とタグの下位ビットに関係性はないため，すべてのセグメントでタグ比較を行う必要がある．
 
-提案手法におけるタグ比較の回路を\fig{segmentedIQ_wakeup}に示す．同図は 4 つのセグメントに分割された発行キューのうち，第 0 セグメントのエントリにおける，第 1 ソース・タグの比較回路を示している．タグ・ビット数は 5 とし、発行幅を $IW$ とする．
+提案手法におけるタグ比較の回路を\fig{segmentedIQ_wakeup}に示す．同図は 4 つのセグメントに分割された発行キューのうち，第 0 セグメントのエントリにおける，第 1 ソース・タグの比較回路を示している．タグ・ビット数は 5 とし，発行幅を $IW$ とする．
 
-タグ比較の動作を図中の番号を用いて説明する．\ctext{1}放送されるディスティネーション・タグの下位 2 ビットはデコーダへ送られる．デコーダはセグメント数だけ信号線を出力する．第 $n$ 番目の信号線は，第 $n$ セグメントでのタグ比較が有効であることを示す．つまり，ディスティネーション・タグの下位ビットが $n$ の場合，$n$ 番目の出力線のみ $H$ を出力し，残りはすべて $L$ を出力する．
+タグ比較の動作を図中の番号を用いて説明する．\ctext{1}放送されるデスティネーション・タグの下位 2 ビットはデコーダへ送られる．デコーダはセグメント数だけ信号線を出力する．第 $n$ 番目の信号線は，第 $n$ セグメントでのタグ比較が有効であることを示す．つまり，デスティネーション・タグの下位ビットが $n$ の場合，$n$ 番目の出力線のみ $H$ を出力し，残りはすべて $L$ を出力する．
 
-\ctext{2}AND ゲートによって，デコーダからの信号線が $H$ の場合にのみ，ディスティネーション・タグの高位ビット及びその反転信号がタグ比較器へ入力される．\fig{segmentedIQ_wakeup}に示す回路は第 0 セグメントのタグ比較回路であるため，デコーダの 0 番目の信号線が AND ゲートに入力されている．
+\ctext{2}AND ゲートによって，デコーダからの信号線が $H$ の場合にのみ，デスティネーション・タグの高位ビット及びその反転信号がタグ比較器へ入力される．\fig{segmentedIQ_wakeup}に示す回路は第 0 セグメントのタグ比較回路であるため，デコーダの 0 番目の信号線が AND ゲートに入力されている．
 
-デコーダからの信号線が $H$ の場合，つまり，ディスティネーション・タグの下位ビットとセグメント番号が一致していた場合のみ，比較器に有効なディスティネーション・タグの高位ビットとその反転信号が送られ，ソース・タグの高位ビットと比較が行われる．デコーダからの信号線が $L$ の場合，ディスティネーション・タグとその反転信号がどちらも L としてタグ比較器へ入力される．この場合，ディスティネーション・タグとその反転信号に接続されたプルダウン・トランジスタがすべて OFF となるため，マッチ線はディスチャージされず，電力を消費しない．
+デコーダからの信号線が $H$ の場合，つまり，デスティネーション・タグの下位ビットとセグメント番号が一致していた場合のみ，比較器に有効なデスティネーション・タグの高位ビットとその反転信号が送られ，ソース・タグの高位ビットと比較が行われる．デコーダからの信号線が $L$ の場合，デスティネーション・タグとその反転信号がどちらも L としてタグ比較器へ入力される．この場合，デスティネーション・タグとその反転信号に接続されたプルダウン・トランジスタがすべて OFF となるため，マッチ線はディスチャージされず，電力を消費しない．
 
 \ctext{3}タグ比較の結果，タグの高位ビットが一致した場合は，比較器から $H$ が出力される．
 
 \ctext{4}タグ比較器が $H$ を出力し，かつデコーダからの信号が $H$ である場合に，タグ比較は一致となる．
 
-\ctext{5}いずれかのディスティネーション・タグがソース・タグと一致した場合に，ソース・オペランドのレディ・ビットがセットされる．
+\ctext{5}いずれかのデスティネーション・タグがソース・タグと一致した場合に，ソース・オペランドのレディ・ビットがセットされる．
 
 
 %4 第 2 ソース・タグ比較の削減
@@ -227,7 +227,7 @@ Ponomarev らと Sembrant らの手法は，発行キューのサイズを縮小
 \end{itemize}
 
 \subsubsection{サブ・セグメントにおけるウェイクアップ}
-第 1 ソース・タグの比較は，ディスティネーション・タグの下位ビットがメイン・セグメント番号と一致するセグメントのみで行う．また，第 2 ソース・タグの比較は，ディスティネーション・タグの下位ビットがサブ・セグメント番号と一致するセグメントのみで行う．このような比較により，第 1 ソース・タグだけでなく，第 2  ソース・タグの比較に関しても，「1/サブ・セグメント数」まで削減が可能となる．
+第 1 ソース・タグの比較は，デスティネーション・タグの下位ビットがメイン・セグメント番号と一致するセグメントのみで行う．また，第 2 ソース・タグの比較は，デスティネーション・タグの下位ビットがサブ・セグメント番号と一致するセグメントのみで行う．このような比較により，第 1 ソース・タグだけでなく，第 2  ソース・タグの比較に関しても，「1/サブ・セグメント数」まで削減が可能となる．
 
 \subsubsection{サブ・セグメントとスワップの併用}
 サブ・セグメント方式はスワップと併用することが可能である．併用する場合は，ディスパッチ時に第 1 ソース・オペランドのみレディである場合の選択アルゴリズムを，以下のように変更する．
@@ -437,7 +437,7 @@ SWITCH 方式におけるディスパッチするエントリの決定回路を\
 \subsubsection{タグ比較回数の削減}
 \fig{comp}に，提案手法の BASE モデルに対するタグ比較回数の割合をベンチマークごとに示す．なお，各棒グラフの上の ILP 及び MLP の表記は，それぞれ，そのベンチマークが ILP または MLP が高いベンチマークであることを示している．ここで，ILP が高いとは BASE モデルでの IPC が 3.5 以上であることを表し，MLP が高いとは BASE モデルでの LLC MPKI が 2.0 以上であることを表す． 
 
-AGGRESSIVE と CONSERVATIVE のタグ比較回数削減に関しては、同図より，いずれのベンチマークにおいても，AGGRESSIVE のほうがタグ比較回数が少ないことがわかる．その差は 平均で 10\% 程度となっており，AGGRESSIVE モードのタグ比較回数を積極的に削減できるという性質が確認できる。
+AGGRESSIVE と CONSERVATIVE のタグ比較回数削減に関しては，同図より，いずれのベンチマークにおいても，AGGRESSIVE のほうがタグ比較回数が少ないことがわかる．その差は 平均で 10\% 程度となっており，AGGRESSIVE モードのタグ比較回数を積極的に削減できるという性質が確認できる．
 
 同図より SWITCH 方式では，平均で BASE モデルの 15\% 程度のタグ比較回数となっており，85\% の削減を達成している．
 
