--- a/thesis/ref.bib
+++ b/thesis/ref.bib
@@ -429,3 +429,7 @@ month={Nov},
   pages = 	 {1-9},
   month = 	 {December},
 }
+
+@misc{SimpleScalar,
+  howpublished = {http://www.simplescalar.com/},
+}
