--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -86,8 +86,8 @@
 
 
 % 付録（必要に応じてコメントを外したり，新たに追加する）
-% \appendix
-% \include{src/appendix1}
+\appendix
+\include{src/appendix1}
 
 % 発表実績（なければコメントアウトしておく）
 \include{src/publication}
