--- a/thesis/src/segment_IQ.tex
+++ b/thesis/src/segment_IQ.tex
@@ -1,7 +1,7 @@
 
 \chapter{提案手法：セグメント化した IQ}
 \label{sec:segment_IQ}
-本論文では，IQ のタグ比較器の動作回数を削減するための手法として，IQ をセグメント化する手法を提案する．本章では，\refsec{segmented_IQ}で提案手法の基本アイデアに関して説明したあと，\refsec{second_tag_comp}で提案手法における第 2 ソース・タグ比較の削減方法である，\textbf{スワップ}と\textbf{サブ・セグメント}に関して説明する．
+本論文では，IQ のタグ比較器の動作回数を削減するための手法として，IQ をセグメント化する手法を提案する．本章では，\refsec{segmented_IQ}で提案手法の基本アイデアに関して説明したあと，\refsec{second_tag_comp}で提案手法における第 2 ソース・タグ比較の削減方法である，\textbf{スワップ}と\textbf{サブ・セグメント}に関して説明する．最後に，\refsec{comp_estimate}で提案手法によるタグ比較回数削減の効果を概算する．
 
 \section{IQ のセグメント化}
 \label{sec:segmented_IQ}
@@ -162,3 +162,54 @@ SVSD の回路図を\fig{SVSD}に示す．SVSD はデスティネーション・
   \label{tab:agg_algorithm_subseg}
 \end{table}
 
+\section{提案手法におけるタグ比較回数の概算}
+\label{sec:comp_estimate}
+提案手法におけるタグ比較回数削減の効果を概算する．なお，サブ・セグメントを使用する場合も使用しない場合も，（R，NR）の場合にスワップを行うものとする．
+
+概算するにあたり，次の 2 つの仮定をおく．
+\begin{enumerate}
+  \item 命令のソース・タグは 50\% の確率でディスパッチ時にレディであるとする．つまり，(NR，NR)，(R，NR)，(NR，R)，(R，R) である命令の数は全て等しいとする．
+  \item 提案手法による IQ の容量効率の低下（詳しくは\refsec{switch}で説明する）は全く生じないとする．
+\end{enumerate}
+上記の仮定をおいた場合に，提案手法を使用した場合のタグ比較回数は，以下の式で計算することができる．
+
+\[
+  \frac{3}{4}\times\frac{1}{M\_seg} + \frac{1}{4}\times\frac{1}{S\_seg}
+\]
+ここで，$M\_seg$ はメイン・セグメント数を， $S\_seg$ はサブ・セグメント数を表す．なお，サブ・セグメントを使用しない場合は，セグメント数を $M\_seg$ とし，$S\_seg = 1 $ として計算すれば良い．
+
+% \fig{comp_estimate}を用いて説明する．同図の左側は，（16，1）の場合における，ディスパッチ時のソース・タグの状態ごとのタグ比較回数を表したものである．灰色のエントリは既にレディなソース・オペランドであり，比較が行われないことを表し，白色のエントリは比較が行われることを表す．（R，R）の場合どちらのタグも比較は行われず，（NR，R）と（R，NR）の場合はレディでない方のタグで比較が行われる．そして（NR，NR）の場合はどちらのタグも比較が行われる．
+
+% 白色のエントリ内には，セグメント化しない場合と比較してどれだけタグ比較が行われるかを分数の形式で示している．例えば\ctext{1}の場合，第 1 ソース・タグの比較回数はセグメント化によって 1/16 まで削減される．(R，NR)の場合にはスワップが行われるため，\ctext{2}も 1/16 となる．また，\ctext{3}も同様に 1/16 となるが，\ctext{4} はタグ比較回数が削減できないため，セグメント化しない場合と同じタグ比較回数（1/1）となる．
+
+% 1 つめの仮定より\ctext{1}から\ctext{4}までの比較回数はすべて同じであると考えられるため，比較回数の合計は\fig{comp_estimate} の左下の式で計算することができ，30\% となる．
+
+% \fig{comp_estimate}の右側で，（8，2）の場合に関して同様の計算を行っている．サブ・セグメントを使用するため，\ctext{4}においてタグ比較回数が 1/2 となっていることが特徴である．計算の結果，タグ比較回数は 22\% となる．（16，1）と（8，2）を比較すると，セグメントの総数が同じであるが，タグ比較回数は（8，2）の方が少なくなっていることがわかる．これは \ctext{4}において，（16，1）では削減できないタグ比較回数が，（8，2）では削減できることが大きな要因である．
+
+この式を用いて，本論文にて評価を行った全てのセグメント数の組み合わせにおけるタグ比較回数の概算を行った．その結果を\tab{comp_estimate}に示す．表に示しているタグ比較回数は，セグメント化しない通常の IQ に対する相対タグ比較回数を \% 形式で示している．
+
+なお，以降の説明において，（メイン・セグメント数，サブ・セグメント数） の形式でセグメント数を表記する．また，サブ・セグメントを使用しない場合は，サブ・セグメント数は 1 と表記する．例えば，サブ・セグメントを使用せず，セグメント数を 16 とする場合は（16，1）と表記し，サブ・セグメントを使用し，メイン・セグメント数を 8 ，サブ・セグメント数を 2 とする場合（8，2）と表記する．
+
+\begin{table}[htb]
+  \caption{タグ比較回数の概算}
+  \footnotesize
+  \center
+    \begin{tabular}{c|c|c} \hline \hline
+    総セグメント数 & （M-seg，S-seg） & 相対タグ比較回数(\%) \\ \hline
+    4 &（4，1） & 44 \\
+    &（2，2） & 50 \\ \hline
+    8 &（8，1） & 34 \\
+    &（4，2） & 31 \\ \hline
+    &（16，1） & 30 \\
+    16 &（8，2） & 22 \\
+    &（4，4） & 25 \\ \hline
+    &（32，1） & 27 \\
+    32 &（16，2） & 17 \\
+    &（8，4） & 16 \\ \hline
+  \end{tabular}
+  \label{tab:comp_estimate}
+\end{table}
+
+表より，総セグメント数が多くなるほど，タグ比較回数が少なくなることがわかる．また，総セグメント数が同じ場合，総セグメント数が 4 の場合を除いて，サブ・セグメントを使用する方がタグ比較回数が少ないことがわかる．これは，サブ・セグメントを用いることによって，（NR，NR）の場合に第 2 ソース・タグの比較回数が削減できるようになる効果が大きいためである．
+
+なお，実際のタグ比較回数は，\refsec{switch}で説明する IQ の容量効率の低下により，計算した概算値よりも少なくなる．
