--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -88,6 +88,7 @@
 % 付録（必要に応じてコメントを外したり，新たに追加する）
 \appendix
 \include{src/appendix1}
+\include{src/appendix2}
 
 % 発表実績（なければコメントアウトしておく）
 \include{src/publication}
@@ -102,7 +103,7 @@
 % 日本語の参考文献を使うときに表示がうまくいかない場合は
 % IEEEをコメントアウトして，andolab2のコメントをはずす
 % andolab2を使う場合は，Makefileも修正する
-\bibliographystyle{IEEEtran} 
+\bibliographystyle{IEEEtran_tmp} 
 % \bibliographystyle{andolab2}
 
 % 参考文献のヘッダを正しくする用
