--- a/thesis/ref.bib
+++ b/thesis/ref.bib
@@ -54,7 +54,7 @@
   year = 	 {1969},
   volume = 	 {ED-16},
   number = 	 {4},
-  pages = 	 {338-347.},
+  pages = 	 {338-347},
   month = 	 {April},
 }
 
@@ -297,7 +297,7 @@ pages={712-727}
   
 @inproceedings{Sembrant2015,
 author = {Sembrant, Andreas and Carlson, Trevor and Hagersten, Erik and Black-Shaffer, David and Perais, Arthur and Seznec, Andr\'{e} and Michaud, Pierre},
-title = {{Long Term Parking} ({LTP}): Criticality-aware Resource Allocation in OOO Processors},
+title = {{Long Term Parking} ({LTP}): Criticality-aware Resource Allocation in {OOO} Processors},
 year = {2015},
 month = {December},
 booktitle = {Proceedings of the 48th International Symposium on Microarchitecture},
@@ -316,14 +316,13 @@ pages = {334--346},
 @INPROCEEDINGS{Motomura1990paper,
   author={M. {Motomura} and J. {Toyoura} and K. {Hirata} and H. {Ooka} and H. {Yamada} and T. {Enomoto}},
   booktitle={1990 37th IEEE International Conference on Solid-State Circuits},   
-  title={A 1.2-million Transistor, 33 MHz, 20-bit Dictionary Search Processor with a 160 kb {CAM}},   
-  year={1990},  
+  title={A 1.2-million Transistor, 33 {MHz}, 20-bit Dictionary Search Processor with a 160 kb {CAM}},   
   pages={90-91},
 }
 @ARTICLE{Motomura1990journal,  
   author={M. {Motomura} and J. {Toyoura} and K. {Hirata} and H. {Ooka} and H. {Yamada} and T. {Enomoto}},  
   journal={IEEE Journal of Solid-State Circuits},   
-  title={A 1.2-million Transistor, 33-MHz, 20-b Dictionary Search Processor ({DISP}) {ULSI} with a 160-kb {CAM}},   
+  title={A 1.2-million Transistor, 33-{MHz}, 20-b Dictionary Search Processor ({DISP}) {ULSI} with a 160-kb {CAM}},   
   year={1990},  
   volume={25},  
   number={5},  
@@ -333,7 +332,7 @@ pages = {334--346},
 @ARTICLE{Farrell1998,  
   author={J. A. {Farrell} and T. C. {Fischer}},  
   journal={IEEE Journal of Solid-State Circuits},   
-  title={Issue Logic for a 600-MHz Out-of-order Execution Microprocessor},   
+  title={Issue Logic for a 600-{MHz} Out-of-order Execution Microprocessor},   
   year={1998},  
   volume={33},  
   number={5},  
@@ -405,7 +404,7 @@ month={Nov},
 }
 
 @Misc{matsuda-thesis,
-  author = 	 {松田　康誉},
+  author = 	 {松田康誉},
   title = 	 {ランダム発行キューにおけるタグの2段階比較による電力削減},
   howpublished = {名古屋大学大学院工学研究科博士課程(前期課程), 修士学位論文},
   OPTmonth = 	 {},
@@ -432,4 +431,13 @@ month={Nov},
 
 @misc{SimpleScalar,
   howpublished = {http://www.simplescalar.com/},
+}
+
+@misc{model2012,
+  howpublished = {http://ptm.asu.edu/}
+}
+
+@misc{itrs2012,
+  author = {International Technology Roadmap for Semiconductors},
+  howpublished = {http://www.itrs2.net/},
 }
